fix a errore del re: non considerava mosse vincenti se erano quelle immediatamente successive